--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
             <a href="/products">produit</a>
         </nav>
     </div>
+    <div>
+        <footer>
+            <p>
+                &copy; 2024 ShineBeauty. Tous droits réservés . </p>
+            <p>
+                Adress : hakam 2, Rue 12, N:5 </p>
+            <a href="/facebook">facebook</a><br>
+            <a href="/instgram">instagram</a><br>
+            <a href="/tiktok">TikTok</a><br>
+            <p>Contactez-vous : <a href="Tel: +212560034606">+212560034606</a></p>
+        </footer>
+    </div>
 
 </body>
 
