--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="nav">
         <nav>
-            <img src="" alt="">
+            <img   class="nav img"   src="shine BeauTy_processed.png" alt="ShineBeauty">
             <a href="/home">Acceuil</a>
             <a href="/contacts">contacts</a>
             <a href="/products">produit</a>
