--- a/index.html
+++ b/index.html
@@ -8,13 +8,30 @@
 </head>
 
 <body>
+    <div class="container">
     <div class="nav">
         <nav>
-            <img   class="nav img"   src="shine BeauTy_processed.png" alt="ShineBeauty">
+            <img class="nav img" src="shine BeauTy_processed.png" alt="ShineBeauty">
+            <a href="/contacts">contact</a>
+            <a href="/products">produits</a>
             <a href="/home">Acceuil</a>
-            <a href="/contacts">contacts</a>
-            <a href="/products">produit</a>
+        
         </nav>
+    </div>
+    <div class="prod">
+        <img src="image3.jpeg" alt="ShineBeauty">
+        <p>découvrez notre fond de teint révolutionnaire, <br>
+        spécialement formulé pour offrir une couvrance impeccable tout
+            en préservant l'éclat naturel de votre peau</p>
+        <ul>
+            <li>taille:50ml</li><br>
+            <li>ingrédients:eau, silicones, huiles végétales, pigments, émollients, agents matifiants, conservateurs et
+                acide hyaluronique</li><br>
+            <li>prix:250dh</li><br>
+            <li>disponibilité:en stocke</li><br>
+
+        </ul>
+
     </div>
     <div>
         <footer>
@@ -22,12 +39,13 @@
                 &copy; 2024 ShineBeauty. Tous droits réservés . </p>
             <p>
                 Adress : hakam 2, Rue 12, N:5 </p>
-            <a href="/facebook">facebook</a><br>
-            <a href="/instgram">instagram</a><br>
-            <a href="/tiktok">TikTok</a><br>
-            <p>Contactez-vous : <a href="Tel: +212560034606">+212560034606</a></p>
+            <a href="/facebook">facebook</a>
+            <a href="/instgram">instagram</a>
+            <a href="/tiktok">TikTok</a>
+            <p>Contactez-nous : <a href="Tel: +212560034606">+212560034606</a></p>
         </footer>
     </div>
+</div>
 
 </body>
 
