3paragraphe et tableux sans js

--- a/index.html
+++ b/index.html
@@ -9,43 +9,96 @@
 
 <body>
     <div class="container">
-    <div class="nav">
-        <nav>
-            <img class="nav img" src="shine BeauTy_processed.png" alt="ShineBeauty">
-            <a href="/contacts">contact</a>
-            <a href="/products">produits</a>
-            <a href="/home">Acceuil</a>
-        
-        </nav>
-    </div>
-    <div class="prod">
-        <img src="image3.jpeg" alt="ShineBeauty">
-        <p>découvrez notre fond de teint révolutionnaire, <br>
-        spécialement formulé pour offrir une couvrance impeccable tout
-            en préservant l'éclat naturel de votre peau</p>
-        <ul>
-            <li>taille:50ml</li><br>
-            <li>ingrédients:eau, silicones, huiles végétales, pigments, émollients, agents matifiants, conservateurs et
-                acide hyaluronique</li><br>
-            <li>prix:250dh</li><br>
-            <li>disponibilité:en stocke</li><br>
+        <div class="nav">
+            <nav>
+                <img class="nav img" src="shine BeauTy_processed.png" alt="ShineBeauty">
+                <a href="/contacts">contact</a>
+                <a href="/products">produits</a>
+                <a href="/home">Acceuil</a>
 
-        </ul>
+            </nav>
+        </div>
+        <div class="paragraphe">
+        <div class="prod">
+            <img src="image3.jpeg" alt="ShineBeauty">
+            <p>découvrez notre fond de teint révolutionnaire, <br>
+                spécialement formulé pour offrir une couvrance impeccable tout
+                en préservant l'éclat naturel de votre peau</p>
+            <ul>
+                <li>taille:50ml</li><br>
+                <li>ingrédients:eau, silicones, huiles végétales, pigments, émollients, agents matifiants, conservateurs
+                    et
+                    acide hyaluronique</li><br>
+                <li>prix:400dh</li><br>
+                <li>disponibilité:en stocke</li><br>
 
+            </ul>
+
+
+        </div>
+        <div class="para2">
+            <img src="image5.jpg" alt="ShineBeauty">
+            <p>Découvrez notre mascara innovant, conçu pour offrir une définition exceptionnelle et un volume
+                spectaculaire à vos cils.</p>
+            <ul>
+                <li>taille:30ml</li><br>
+                <li>Les ingrédients typiques d'un mascara incluent de l'eau, des cires 
+                   , des pigments , des agents épaississants, des conservateurs, des
+                    émollients des agents filmogènes et parfois des parfums</li><br>
+                <li>prix:300dh</li><br>
+                <li>disponibilité:en stocke</li><br>
+
+            </ul>
+
+        </div>
+        <div class="para3">
+            <img src="image7.jpg" alt="ShineBeauty">
+            <p>Plongez dans l'univers de notre rouge à lèvres luxueux, enrichi en pigments vibrants pour une couleur
+                éclatante et une tenue longue durée</p>
+            <ul>
+                <li>taille:30ml</li><br>
+                <li>Les ingrédients typiques d'un rouge à lèvres incluent des huiles (comme l'huile de ricin), des
+                    beurres , des cires (comme la cire d'abeille), des pigments colorés, des
+                    émollients, des conservateurs, des antioxydants (comme la vitamine E) et parfois des fragrances</li>
+                <br>
+                <li>prix: 400dh</li><br>
+                <li>disponibilité:en stocke</li><br>
+
+            </ul>
+
+        </div>
     </div>
-    <div>
-        <footer>
-            <p>
-                &copy; 2024 ShineBeauty. Tous droits réservés . </p>
-            <p>
-                Adress : hakam 2, Rue 12, N:5 </p>
-            <a href="/facebook">facebook</a>
-            <a href="/instgram">instagram</a>
-            <a href="/tiktok">TikTok</a>
-            <p>Contactez-nous : <a href="Tel: +212560034606">+212560034606</a></p>
-        </footer>
+        <div class="tableau">
+            <h2> listes des produits</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>nom</th>
+                        <th>prénom</th>
+                        <th>email</th>
+                        <th>adrrese</th>
+                        <th>num de tél </th>
+                    </tr>
+                </thead>
+                <tbody id="liste ordonner ">
+
+                </tbody>
+            </table>
+
+        </div>
+        <div>
+            <footer>
+                <p>
+                    &copy; 2024 ShineBeauty. Tous droits réservés . </p>
+                <p>
+                    Adress : hakam 2, Rue 12, N:5 </p>
+                <a href="/facebook">facebook</a>
+                <a href="/instgram">instagram</a>
+                <a href="/tiktok">TikTok</a>
+                <p>Contactez-nous : <a href="Tel: +212560034606">+212560034606</a></p>
+            </footer>
+        </div>
     </div>
-</div>
 
 </body>
 
