--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
                         conservateurs
                         et
                         acide hyaluronique</li><br>
-                    <li>prix:400dh</li><br>
+                    <li>400dh</li><br>
                     <li>disponibilité:en stocke</li><br>
 
                 </ul>
                 <div class="button">
-                    <button onclick="document.getElementById('formulaire').scrollIntoView();">Ajouter au Panier</button>
+                    <button onclick="document.getElementById('formulaire').scrollIntoView();">Ajouter </button>
                 </div>
                 
 
@@ -55,12 +55,12 @@
                     <li>Les ingrédients typiques d'un mascara incluent de l'eau, des cires
                         , des pigments , des agents épaississants, des conservateurs, des
                         émollients des agents filmogènes et parfois des parfums</li><br>
-                    <li>prix:300dh</li><br>
+                    <li>300dh</li><br>
                     <li>disponibilité:en stocke</li><br>
 
                 </ul>
                 <div class="button">
-                    <button onclick="document.getElementById('formulaire').scrollIntoView();">Ajouter au Panier</button>
+                    <button onclick="document.getElementById('formulaire').scrollIntoView();">Ajouter </button>
                 </div>
 
 
@@ -76,12 +76,12 @@
                         émollients, des conservateurs, des antioxydants (comme la vitamine E) et parfois des fragrances
                     </li>
                     <br>
-                    <li>prix: 400dh</li><br>
+                    <li>400dh</li><br>
                     <li>disponibilité:en stocke</li><br>
 
                 </ul>
                 <div class="button">
-                    <button onclick="document.getElementById('formulaire').scrollIntoView();">Ajouter au Panier</button>
+                    <button onclick="document.getElementById('formulaire').scrollIntoView();">Ajouter</button>
                 </div>
 
             </div>
@@ -102,12 +102,11 @@
                     <li><label for="Adress">Entre your Adress : </label></li>
                     <input type="text" name="Adress" id="Adress"><br>
                     <li><label for="Numéro tele">Entre your Numéro :</label></li>
-                    <input type="tel" name="Numéro tele" id="Numéro tele"><br>
+                    <input type="number" name="Numéro tele" id="Numéro tele"><br>
                     <li><label for="Quantite">la Quantite :</label></li>
                     <input type="number" name="Quantite" id="Quantite"><br>
                     <li><span id="total-price">Prix Totale : </span> </li>
                    
-
 
             </form>
         </div>
