--- a/index.html
+++ b/index.html
@@ -136,6 +136,8 @@
                         <th>email</th>
                         <th>adrrese</th>
                         <th>num de tél </th>
+                        <th>Quantité commandée </th>
+                        <th>Total de la commande </th>
                     </tr>
                 </thead>
                 <tbody id="liste ordonner ">
