--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@
 
         <footer>
             <p>Adresse : hakam 2, Rue 12, N:5</p>
-            <a href="/facebook" title="Facebook"><img src="facebook.png" alt="Facebook"></a>
-            <a href="/instgram" title="instgram"><img src="instagram.png" alt="instagram"></a>
-            <a href="/tiktok" title="tiktok"><img src="tik-tok.png" alt="tiktok"></a>
+            <p>facebook<a href="/facebook" title="Facebook"><img src="facebook.png" alt="Facebook"></a></p>
+            <p>Instgramme<a href="/instgram" title="instgram"><img src="instagram.png" alt="instagram"></a>
+            <p>TikTok<a href="/tiktok" title="tiktok"><img src="tik-tok.png" alt="tiktok"></a></p>
             <p>Contactez-nous:<a href="Tel: +212560034606"><img src="tele.png" alt="0560034606"></a></p>
             <p>&copy; 2024 ShineBeauty. Tous droits réservés.</p>
         </footer>
 
-        <script src="index.js"></script> <!-- Assurez-vous que le script est bien ici -->
+        <script src="index.js"></script> 
     </div>
 </body>
 
