--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>ShineBeauty</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -85,19 +86,21 @@
                 <h2> Ajouter en panier : </h2>
                 <br>
                 <div class="slasse">
-                    <li><label for="name">Entre your name :</label></li>
-                    <input type="text" name="name" id="name" required><br>
-                    <li><label for="prénom">Entre your prénom :</label></li>
-                    <input type="text" name="prénom" id="prénom" required><br>
-                    <li><label for="email">Entre your Email :</label></li>
-                    <input type="email" name="Email" id="Email" required><br>
-                    <li><label for="Adress">Entre your Adress : </label></li>
-                    <input type="text" name="Adress" id="Adress" required><br>
-                    <li><label for="Numéro tele">Entre your Numéro :</label></li>
-                    <input type="number" name="Numéro tele" id="Numéro tele" required><br>
+                    <li><label for="name">Entre votre nom :</label></li>
+                    <input type="text" name="name" id="name" required placeholder="entrer votre nom"><br>
+                    <li><label for="prénom">Entre votre prénom :</label></li>
+                    <input type="text" name="prénom" id="prénom" required placeholder="entrer votre prénom"><br>
+                    <li><label for="email">Entre votre Email :</label></li>
+                    <input type="email" name="Email" id="Email" required placeholder="entrer votre email"><br>
+                    <li><label for="Adress">Entre votre Adress : </label></li>
+                    <input type="text" name="Adress" id="Adress" required  placeholder="entrer votre addrese "><br>
+                    <li><label for="Numéro tele">Entre votre  Numéro :</label></li>
+                    <input type="number" name="Numéro tele" id="Numéro tele" required placeholder="entrer votre num"><br>
                     <li><label for="Quantite">la Quantite :</label></li>
-                    <input type="number" name="Quantite" id="Quantite" min="1" required><br>
-                    <li><span id="total-price">Prix Totale : 0 dh </span></li>
+                    <input type="number" name="Quantite" id="Quantite" min="1" required  placeholder="entrer la quantite "><br>
+                    <label for="total-price">prix totale </label><br>
+                    <span id="total-price">Prix Totale : 0 dh </span></li>
+                    
                     <br>
                     <div class="form-actions">
                         <button type="submit">Ajouter en panier</button>
@@ -129,9 +132,11 @@
 
         <footer>
             <p>Adresse : hakam 2, Rue 12, N:5</p>
+            <div class="Fot">
             <p>facebook<a href="/facebook" title="Facebook"><img src="facebook.png" alt="Facebook"></a></p>
             <p>Instgramme<a href="/instgram" title="instgram"><img src="instagram.png" alt="instagram"></a>
             <p>TikTok<a href="/tiktok" title="tiktok"><img src="tik-tok.png" alt="tiktok"></a></p>
+            </div>
             <p>Contactez-nous:<a href="Tel: +212560034606"><img src="tele.png" alt="0560034606"></a></p>
             <p>&copy; 2024 ShineBeauty. Tous droits réservés.</p>
         </footer>
